--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 node_modules/
 node_modules/*
+
+js/node_modules/
+js/node_modules/*
+
 package-lock.json
 
 css/style.css.map
+js/scripts.min.js.map
